--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="main-content">
       <h1>
 <a id="react-redux-sample-app" class="anchor" href="#react-redux-sample-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>React Redux sample app</h1>
-
+To view the app demo go to <a href="http://brunoaltinet.github.io/react-redux-example/demo/">http://brunoaltinet.github.io/react-redux-example/demo/</a>
 <p>This example app is an up-to-date showcase of following libraries: <a href="https://github.com/gulpjs/gulp">gulp</a>, <a href="https://github.com/LearnBoost/stylus">stylus</a>, <a href="https://github.com/webpack/webpack">webpack</a>,
 <a href="https://github.com/gaearon/react-hot-loader">react-hot-loader</a>,
 <a href="https://github.com/babel/babel">babel</a> for ES6 syntax and .jsx handling.
